maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: type mismatch;
 found   : Unit
 required: Int
      var dir=keepHandOnSideWall() : Int
                                ^PledgeMaze:30: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return dir
  ^